--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "14.17.3"
+    "node": "14.17.3",
+    "npm": "7.19.1"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
